--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^6.1.0",
+    "@angular/cdk": "^6.4.1",
     "@angular/common": "4.0.0",
     "@angular/compiler": "4.0.0",
     "@angular/core": "4.0.0",
     "@angular/forms": "4.0.0",
     "@angular/http": "4.0.0",
+    "@angular/material": "^6.4.1",
     "@angular/platform-browser": "4.0.0",
     "@angular/platform-browser-dynamic": "4.0.0",
     "@angular/router": "4.0.0",
     "admin-lte": "2.3.11",
     "core-js": "2.4.1",
     "font-awesome": "4.7.0",
+    "hammerjs": "^2.0.8",
     "intl": "1.2.5",
     "jquery": "3.1.1",
     "reflect-metadata": "0.1.9",
